--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^5.10.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.8.1"
   }
 }
