--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./bin/www",
     "dev": "cross-env DEBUG=nodeapi:* PORT=3000 NODE_ENV=development nodemon",
-    "initDb": "node ./initDataBase.js"
+    "init-db": "node ./initDataBase.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -18,7 +18,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.3",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "eslint": "^7.8.1"
