--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "init-db": "node ./initDataBase.js"
   },
   "dependencies": {
+    "apidoc": "^0.25.0",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.2",
     "debug": "~2.6.9",
